--- a/main/templates/main/get_user.html
+++ b/main/templates/main/get_user.html
@@ -1,18 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
-
 <div>
     <a href="{% url 'home' %}"> home</a>
     {% if not request.user.is_authenticated %}
         <a href="{% url 'login' %}"> login</a>
         <a href="{% url 'register' %}"> register</a>
     {% else %}
-        <span>Hello, <a href="{% url 'my_profile' %}"> {{ user.username }}</a></span>
+        <span>Hello, <a href="{% url 'my_profile' %}"> {{ request.user.username }}</a></span>
         <a href="{% url 'logout' %}"> logout</a>
         <a href="{% url 'create' %}"> create post</a>
     {% endif %}
@@ -62,7 +54,20 @@
     <p>Location: -NONE-</p>
 {% endif %}
 
-<a href="{% url 'profile_edit' %}"> Edit profile</a>
+{% if request.user.id != user.id %}
+    {% if if_follow %}
+        <p>You already follow {{ user.username }}</p>
+        <form method="post">
+            {% csrf_token %}
+            <div><button type="submit" > Stop follow </button></div>
+        </form>
+    {% else %}
+        <form method="post">
+            {% csrf_token %}
+            <div><button type="submit" > Follow </button></div>
+        </form>
+    {% endif %}
+{% endif %}
 
 {% for item in posts %}
 
@@ -90,6 +95,3 @@
     </div>
 
 {% endfor %}
-
-</body>
-</html>
