--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+
+<div>
+    <form action="{% url 'search' %}" method="get">
+        <div><input name="q" type="text" placeholder="Search..."> </div>
+        <div><button type="submit" > Search </button></div>
+    </form>
+</div>
+
 <div>
     <a href="{% url 'home' %}"> home</a>
     {% if not request.user.is_authenticated %}
@@ -16,7 +24,11 @@
     {% endif %}
 </div>
 
+{% if request.user.is_authenticated %}
+    <h1>HELLO {{ user.username }}!</h1>
+{% else %}
+    <h1>HELLO MASTER!</h1>
+{% endif %}
 
-<h1>HELLO MASTER!</h1>
 </body>
 </html>
