--- a/main/templates/main/one_post.html
+++ b/main/templates/main/one_post.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}
+{{ request.user.username }}
+{% endblock %}
+
+
+{% block content %}
 
 <div>
 
@@ -14,7 +15,7 @@
         Просмотров: {{ post.views }}
     </p>
     {% if post.photo %}
-        <img src="{{ post.photo.url }}" alt="X" width="650" height="450">
+        <img src="{{ post.photo.url }}" alt="X" width="650" >
     {% else %}
         <img src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="X" width="650" height="450">
     {% endif %}
@@ -49,5 +50,4 @@
 
 </div>
 
-</body>
-</html>
+{% endblock %}
