--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,28 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div>
-    <form action="{% url 'search' %}" method="get">
-        <div><input name="q" type="text" placeholder="Search..."> </div>
-        <div><button type="submit" > Search </button></div>
-    </form>
-</div>
+{% block title %}
+{{ request.user.username }}
+{% endblock %}
 
-<div>
-    <a href="{% url 'home' %}"> home</a>
-    {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}"> login</a>
-        <a href="{% url 'register' %}"> register</a>
-    {% else %}
-        <span>Hello, <a href="{% url 'my_profile' %}"> {{ user.username }}</a></span>
-        <a href="{% url 'logout' %}"> logout</a>
-    {% endif %}
-</div>
+
+{% block content %}
 
 {% if request.user.is_authenticated %}
     <h1>HELLO {{ user.username }}!</h1>
@@ -30,5 +13,20 @@
     <h1>HELLO MASTER!</h1>
 {% endif %}
 
-</body>
-</html>
+{% for item in following_posts %}
+        <div class="posts">
+
+            <a href="{{item.get_absolute_url}}" >
+                <img class="img-round" src="{{ item.photo.url }}" alt="X" width="650">
+            </a>
+            <p >
+                <a class="text-post-mr" href="{% url 'get_user' item.user_id %}">{{item.user}}.</a>
+
+            </p>
+            <p class="text-post-mr">{{ item.content|truncatewords:15 }}</p>
+            <div class="bt-post-mr"><a class="floating-button" href="{{item.get_absolute_url}}" >Open POST</a></div>
+            <span class="text-post-mr invi-text">Создано {{item.created_at|timesince}} назад. Просмотров: {{ item.views }}</span>
+        </div>
+{% endfor %}
+
+{% endblock %}
