--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,35 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div>
-    <a href="{% url 'home' %}"> home</a>
-    {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}"> login</a>
-        <a href="{% url 'register' %}"> register</a>
-    {% else %}
-        <span>Hello, {{ user.username }}</span>
-        <a href="{% url 'logout' %}"> logout</a>
-    {% endif %}
-</div>
+{% block title %}
+{{ request.user.username }}
+{% endblock %}
+
+
+{% block content %}
 
 <div>
     <form action="#"  method="post">
         {% csrf_token %}
+
         {% comment %}
         {{ form.as_p }}
         {% endcomment %}
-
-        {% comment %}
-            <p>Email: </p>
-            <div class="err">{{ form.email.errors }}</div>
-            {{ form.email }}
-        {% endcomment %}
-
 
         <p>Username: </p>
         <div class="err">{{ form.username.errors }}</div>
@@ -39,11 +23,8 @@
         <div class="err">{{ form.password.errors }}</div>
         {{ form.password }}
 
-
-
         <div><button type="submit"> Login </button></div>
     </form>
 </div>
 
-</body>
-</html>
+{% endblock %}
