--- a/main/templates/main/my_profile.html
+++ b/main/templates/main/my_profile.html
@@ -1,95 +1,90 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div>
-    <a href="{% url 'home' %}"> home</a>
-    {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}"> login</a>
-        <a href="{% url 'register' %}"> register</a>
-    {% else %}
-        <span>Hello, <a href="{% url 'my_profile' %}"> {{ user.username }}</a></span>
-        <a href="{% url 'logout' %}"> logout</a>
-        <a href="{% url 'create' %}"> create post</a>
-    {% endif %}
-</div>
+{% block title %}
+    {{ request.user.username }}
+{% endblock %}
 
-<h1>{{ user.username }}</h1>
 
-{% if profile.avatar %}
-    <img src="{{ profile.avatar.url }}" alt="XXX" width="350" >
-{% else %}
-    <img src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="X" width="350">
-{% endif %}
+{% block content %}
 
-{% if user.first_name %}
-    <p>First name: {{ user.first_name }}</p>
-{% else %}
-    <p>First name: -NONE-</p>
-{% endif %}
 
-{% if user.last_name %}
-    <p>Last name: {{ user.last_name }}</p>
-{% else %}
-    <p>Last name: -NONE-</p>
-{% endif %}
 
-{% if user.email %}
-    <p>Email: {{ user.email }}</p>
-{% else %}
-    <p>Email: -NONE-</p>
-{% endif %}
 
-{% if user.bio %}
-    <p>Bio: {{ profile.bio }}</p>
-{% else %}
-    <p>Bio: -NONE-</p>
-{% endif %}
+    <div class="prof-info">
 
-{% if user.birth_date %}
-    <p>Email: {{ profile.birth_date }}</p>
-{% else %}
-    <p>Email: -NONE-</p>
-{% endif %}
+        <h1>{{ user.username }}</h1>
 
-{% if user.location %}
-    <p>Location: {{ profile.location }}</p>
-{% else %}
-    <p>Location: -NONE-</p>
-{% endif %}
+        <span>Followers: {{ followers }}</span>
+        <span>Following: {{ following }}</span>
+        <span>Posts: {{ posts_cou }}</span>
+        <div >
+            {% if profile.avatar %}
+                <div><img class="avatar-pic" src="{{ profile.avatar.url }}" alt="XXX" width="350" ></div>
+            {% else %}
+                <div><img class="avatar-pic" src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="X" width="350"></div>
+            {% endif %}
+        </div>
 
-<a href="{% url 'profile_edit' %}"> Edit profile</a>
-
-{% for item in posts %}
-
-    <div>
-
-        <hr align="left" width="700" size="2" color="#ff0000" />
-
-        <p>{{item.user}} </p>
-        <p >
-            <a href="#">{{item.user}}.</a> Создано {{item.created_at|timesince}} назад.
-            Просмотров: {{ item.views }}
-        </p>
-        {% if item.photo %}
-            <img src="{{ item.photo.url }}" alt="X" width="650" height="450">
+        {% if user.first_name %}
+            <p>First name: {{ user.first_name }}</p>
         {% else %}
-            <img src="https://ih1.redbubble.net/image.1417647673.2505/st,small,507x507-pad,600x600,f8f8f8.jpg" alt="X" width="650" height="450">
+            <p>First name: -NONE-</p>
         {% endif %}
-        <p >{{item.content|linebreaks}}</p>
 
-        <p><a href="{{item.get_absolute_url}}" >Open POST</a></p>
+        {% if user.last_name %}
+            <p>Last name: {{ user.last_name }}</p>
+        {% else %}
+            <p>Last name: -NONE-</p>
+        {% endif %}
 
-        <hr align="left" width="700" size="2" color="#ff0000" />
+        {% if user.email %}
+            <p>Email: {{ user.email }}</p>
+        {% else %}
+            <p>Email: -NONE-</p>
+        {% endif %}
 
-        <br>
+        {% if user.bio %}
+            <p>Bio: {{ profile.bio }}</p>
+        {% else %}
+            <p>Bio: -NONE-</p>
+        {% endif %}
+
+        {% if user.birth_date %}
+            <p>Email: {{ profile.birth_date }}</p>
+        {% else %}
+            <p>Email: -NONE-</p>
+        {% endif %}
+
+        {% if user.location %}
+            <p>Location: {{ profile.location }}</p>
+        {% else %}
+            <p>Location: -NONE-</p>
+        {% endif %}
+
+        <a class="floating-button" href="{% url 'profile_edit' %}"> Edit profile</a>
+
     </div>
 
-{% endfor %}
+    <br>
+    <hr class="line-prof" size="2" />
+    <br>
 
-</body>
-</html>
+    {% for item in posts %}
+
+        <div class="posts">
+
+            <a href="{{item.get_absolute_url}}" >
+                <img class="img-round" src="{{ item.photo.url }}" alt="X" width="650">
+            </a>
+            <p >
+                <a class="text-post-mr" href="{% url 'get_user' item.user_id %}">{{item.user}}.</a>
+
+            </p>
+            <p class="text-post-mr">{{ item.content|truncatewords:15 }}</p>
+            <div class="bt-post-mr"><a class="floating-button" href="{{item.get_absolute_url}}" >Open POST</a></div>
+            <span class="text-post-mr invi-text">Создано {{item.created_at|timesince}} назад. Просмотров: {{ item.views }}</span>
+        </div>
+
+    {% endfor %}
+
+{% endblock %}
