--- a/main/templates/main/profile_edit.html
+++ b/main/templates/main/profile_edit.html
@@ -1,21 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div>
-    <a href="{% url 'home' %}"> home</a>
-    {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}"> login</a>
-        <a href="{% url 'register' %}"> register</a>
-    {% else %}
-        <span>Hello, {{ user.username }}</span>
-        <a href="{% url 'logout' %}"> logout</a>
-    {% endif %}
-</div>
+{% block title %}
+{{ request.user.username }}
+{% endblock %}
+
+
+{% block content %}
 
 <div>
 
@@ -33,5 +23,4 @@
     </form>
 </div>
 
-</body>
-</html>
+{% endblock %}
