--- a/main/templates/main/register.html
+++ b/main/templates/main/register.html
@@ -1,50 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-<div>
-    <a href="{% url 'home' %}"> home</a>
-    {% if not request.user.is_authenticated %}
-        <a href="{% url 'login' %}"> login</a>
-        <a href="{% url 'register' %}"> register</a>
-    {% else %}
-        <span>Hello, {{ user.username }}</span>
-        <a href="{% url 'logout' %}"> logout</a>
-    {% endif %}
-</div>
+{% block title %}
+    {{ request.user.username }}
+{% endblock %}
+
+
+{% block content %}
 
     <div>
-    <form method="post">
+        <form method="post">
 
-        {% csrf_token %}
+            {% csrf_token %}
 
-        {{ form.as_p }}
+            {{ form.as_p }}
 
 
-    {% comment %}
-        <p>Username: </p>
-        <div class="err">{{ form.username.errors }}</div>
-        {{ form.username }}
+        {% comment %}
+            <p>Username: </p>
+            <div class="err">{{ form.username.errors }}</div>
+            {{ form.username }}
 
-        <p>Email: </p>
-        <div class="err">{{ form.email.errors }}</div>
-        {{ form.email }}
+            <p>Email: </p>
+            <div class="err">{{ form.email.errors }}</div>
+            {{ form.email }}
 
-        <p>Pass:</p>
-        <div class="err">{{ form.password1.errors }}</div>
-        {{ form.password1 }}
+            <p>Pass:</p>
+            <div class="err">{{ form.password1.errors }}</div>
+            {{ form.password1 }}
 
-        <p>Pass2:</p>
-        <div class="err">{{ form.password2.errors }}</div>
-        {{ form.password2 }}
-    {% endcomment %}
+            <p>Pass2:</p>
+            <div class="err">{{ form.password2.errors }}</div>
+            {{ form.password2 }}
+        {% endcomment %}
 
-        <div><button type="submit"> Register </button></div>
-    </form>
-</div>
-</body>
-</html>
+            <div><button type="submit"> Register </button></div>
+        </form>
+    </div>
+
+{% endblock %}
